Complete Capstone 1 Project

--- a/Capstone Project 1/index.html
+++ b/Capstone Project 1/index.html
@@ -5,30 +5,66 @@
         <title>My Resume</title>
     </head>
     <body>
+        <h1>Robert Watts</h1>
+        <img src="./assets/robbwatts.jpg" height="300"><br/>
+        <a href="./public/contact.html">Contact Me</a>
+        <h2>Skills</h2>
+        <h4>
+            <P>Quickly Able To Learn Computer Processes And Work With a Team To Create A Successful Business System. Familiar with HTML, CSS, and Javascript as Knowledge Is Continued To Be Expanded Upon Daily. Documents All Work to Ensure Time Is Saved If Problem Arises Again.</P>
+        </h4>
+        <hr/>
+        <h2>Portfolio</h2>
+        <a href="./public/portfolio.html">Click here to see what I've worked on</a>
+        <hr/>
+        <h2>Experience</h2>
+        <h4>August 2023-Present<br/>
+        Cascade Asset Management, Madison, Wisconsin - Inventory Technician<br/>
+        <ul>
+            <li>Sort Electronics For Recycling And Refurbishing.</li>
+            <li>Accurately Enter Data Information Into Computer System About Items Received.</li>
+            <li>Process Electronics And Correctly Send Them To Their Designated Department.</li>
+        </ul>
+        October 2010-March 2023<br/>
+        Best Buy, Concord Pike, Delaware - Inventory Specialist/Supervisor
+        <ul>
+            <li>Control Ingoing and Outgoing of Multimillion Dollar Inventory For Retail Store.</li>
+            <li>Accurately Keep Track of Inventory Weekly and Report Any Discrepancies.</li>
+            <li>Work with Multiple Computer Systems Daily and Train new Employees To Use Systems.</li>
+        </ul>
+        April 2010-October-2010
+        R&L Carriers, Hatfield, Pennsylvania - Forklift Operator
+        <ul>
+            <li>Load/Unload Trucks To Over Forty Locations.</li>
+            <li>Checking/Ensuring Item Counts Based On Truck Manifest.</li>
+            <li>Using Problem Solving Skills To Load Trucks In Order To Not Damage Merchandise In-Route.</li>
+        </ul>        
+        </h4>
+        <hr/>
+        <h2>Education</h2>
+        <h4>September 2007-April 2008<br/>
+        Montgomery County Community College, Blue Bell, Pennsylvania.
+        <ul>
+            <li>Completed 32 Credits Towards Associates Degree In Computer Science.</li>
+        </ul>
+        October 2023 - March 2024</br>
+        100 Days of Code: The Complete Python Pro Bootcamp.
+        <ul>
+            <li>Learned Python Through The 100 Days Of Code Bootcamp.</li>
+        </ul>
+        May 2024 - Present</br>
+        Complete 2024 Web Development Bootcamp
+        <ul>
+            <li>Currently Going Through This Course To Expand My Knowledge On HTML, CSS, And Javascript.</li>
+        </ul>
+        <hr/>
+    </body>
+    <footer>
+        Robert Watts 2024
+    </footer>
+</html>
+
+
+
         <!-- Project Specifications
 
-        Inside the body section, write HTML code to create an online resume covering the following aspects:
-
-        Summary or objective statement
-
-        Education (list degrees, schools, and dates)
-
-        Work experience (list job titles, employers, dates, and responsibilities)
-
-        Skills (list relevant skills or areas of expertise)
-
-        Awards, certifications, or other achievements (list any relevant awards, certifications, or other accomplishments)
-
-        Use appropriate HTML tags to format the content of each section, such as h1 for section headings and ul or ol for lists.
-
-        Use HTML tags to add a profile photo of yourself.
-
-        Use relevant anchor tags to create a multi-page website, listing other aspects of your resume such as Hobbies and Contact details.
-
-        Add a footer element with your name and any copyright information or other disclaimers. (Hint: use the MDN docs for things you don't know how to do: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/footer
-
-        Save the index.html file and open it in a web browser to ensure that it displays correctly.
-
-        Add your website to your GitHub to start building your portfolio. -->
-    </body>
-</html>
+        Use HTML tags to add a profile photo of yourself.-->
