--- a/Capstone Project 1/public/contact.html
+++ b/Capstone Project 1/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: (267)663-9592</p>
+<p>Email: xalneth@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  6364 Nesbitt Road<br />
+  Madison, WI 53719<br />
+  United States <br />
 </p>
