--- a/Capstone Project 1/public/portfolio.html
+++ b/Capstone Project 1/public/portfolio.html
@@ -8,10 +8,10 @@
         <h1>Robb Watts' Portfolio</h1>
         <h2>I'm a Web Developer</h2>
         <hr/>
-        <p><a href="./public/movie-ranking.html">Movie Ranking Project</a>
-        <p><img src="./assets/images/movie-ranking.png" height="200"/ alt="Movie Ranking website - image">
-        <p><a href="./public/birthday-invite.html">Birthday Invite Project</a>
-        <p><img src="./assets/images/birthday-invite.png" height="200"/ alt="Birthday invite Project - image">
+        <p><a href="../public/movie-ranking.html">Movie Ranking Project</a>
+        <p><img src="../assets/movie-ranking.png" height="200"/ alt="Movie Ranking website - image">
+        <p><a href="../public/birthday-invite.html">Birthday Invite Project</a>
+        <p><img src="../assets/birthday-invite.png" height="200"/ alt="Birthday invite Project - image">
         <hr/>
         <p><a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a>
     </BODY>
