Fix links in portfolio

--- a/Capstone Project 1/public/portfolio.html
+++ b/Capstone Project 1/public/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML lang="en">
     <HEAD>
-        <meta charset="UTF-8"
+        <meta charset="UTF-8">
         <TITLE>My Portfolio</TITLE>
     </HEAD>
     <BODY>
@@ -13,6 +13,6 @@
         <p><a href="../public/birthday-invite.html">Birthday Invite Project</a>
         <p><img src="../assets/birthday-invite.png" height="200"/ alt="Birthday invite Project - image">
         <hr/>
-        <p><a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a>
+        <p><a href="../public/about.html">About Me</a> <a href="../public/contact.html">Contact Me</a>
     </BODY>
 </HTML>
