--- a/5.1. Adding CSS/internal.html
+++ b/5.1. Adding CSS/internal.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+  <style>
+    html {
+      background-color: red;
+    }
+    </style>
   <meta charset="UTF-8">
   <title>Internal</title>
 </head>
