Fix minor typos

--- a/5.1. Adding CSS/internal.html
+++ b/5.1. Adding CSS/internal.html
@@ -3,8 +3,8 @@
 
 <head>
   <style>
-    html {
-      background-color: red;
+    h1 {
+      color: red;
     }
     </style>
   <meta charset="UTF-8">
