--- a/Capstone Project 1/public/portfolio.html
+++ b/Capstone Project 1/public/portfolio.html
@@ -12,6 +12,8 @@
         <p><img src="../assets/movie-ranking.png" height="200"/ alt="Movie Ranking website - image">
         <p><a href="../public/birthday-invite.html">Birthday Invite Project</a>
         <p><img src="../assets/birthday-invite.png" height="200"/ alt="Birthday invite Project - image">
+            <P><a href="../public/color-vocab.html">Color Vocabulary</a>
+        <p><img src="../assets/color-vocab.png" width="200"/>   
         <hr/>
         <p><a href="../public/about.html">About Me</a> <a href="../public/contact.html">Contact Me</a>
     </BODY>
