Update Capstone Portfolio with Motivational Poster

--- a/Capstone Project 1/public/portfolio.html
+++ b/Capstone Project 1/public/portfolio.html
@@ -8,12 +8,14 @@
         <h1>Robb Watts' Portfolio</h1>
         <h2>I'm a Web Developer</h2>
         <hr/>
-        <p><a href="../public/movie-ranking.html">Movie Ranking Project</a>
-        <p><img src="../assets/movie-ranking.png" height="200"/ alt="Movie Ranking website - image">
-        <p><a href="../public/birthday-invite.html">Birthday Invite Project</a>
-        <p><img src="../assets/birthday-invite.png" height="200"/ alt="Birthday invite Project - image">
-            <P><a href="../public/color-vocab.html">Color Vocabulary</a>
-        <p><img src="../assets/color-vocab.png" width="200"/>   
+        <p><a href="../public/movie-ranking.html">Movie Ranking Project</a></p>
+        <p><img src="../assets/movie-ranking.png" height="200"/ alt="Movie Ranking website preview - image"></p>
+        <p><a href="../public/birthday-invite.html">Birthday Invite Project</a></p>
+        <p><img src="../assets/birthday-invite.png" height="200"/ alt="Birthday invite Project preview - image"></p>
+        <p><a href="../public/color-vocab.html">Color Vocabulary</a></p>
+        <p><img src="../assets/color-vocab.png" width="200" alt="Color Vocabulary website preview - image"/></p>
+        <p><a href="./meme-poster.html">Motivational Meme Poster</a></p>
+        <p><img src="../assets/meme-poster.png" width="200" alt="Motivational Meme poster website preview - image"/></p>
         <hr/>
         <p><a href="../public/about.html">About Me</a> <a href="../public/contact.html">Contact Me</a>
     </BODY>
