--- a/8.0+CSS+Display/8.0 CSS Display/index.html
+++ b/8.0+CSS+Display/8.0 CSS Display/index.html
@@ -15,21 +15,21 @@
     }
 
     .red {
-      display: block;
+      display: inline-flex;
       width: 200px;
       height: 200px;
       background-color: red;
     }
 
     .green {
-      display: inline;
+      display: inline-flex;
       width: 200px;
       height: 200px;
       background-color: green;
     }
 
     .blue {
-      display: inline-block;
+      display: inline-flex;
       width: 200px;
       height: 200px;
       background-color: blue;
